--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://a-cor-do-vazio-rpg-backend.herokuapp.com/a_cor_do_vazio
+spring.datasource.url=jdbc:postgresql://localhost:5432/a_cor_do_vazio
 spring.datasource.username=postgres
 spring.datasource.password=root
 spring.jpa.show-sql=true
